--- a/decisiontree/decisiontree_2022503035.ipynb
+++ b/decisiontree/decisiontree_2022503035.ipynb
@@ -1,27 +1,17 @@
 {
   "cells": [
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/Kritzr/machine_learning/blob/main/decisiontree/decisiontree_2022503035.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
       "cell_type": "code",
       "execution_count": 1,
       "id": "21b431b0-e637-4e44-a3fb-fa2fceb2e7fe",
       "metadata": {
         "tags": [],
-        "id": "21b431b0-e637-4e44-a3fb-fa2fceb2e7fe",
-        "outputId": "7ee691e3-743f-4eb4-c7f0-d74c3b7a2cdc",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 653
-        }
+        },
+        "id": "21b431b0-e637-4e44-a3fb-fa2fceb2e7fe",
+        "outputId": "7ee691e3-743f-4eb4-c7f0-d74c3b7a2cdc"
       },
       "outputs": [
         {
@@ -96,12 +86,12 @@
       "id": "72246670-9947-4826-bf96-6d911286c526",
       "metadata": {
         "tags": [],
-        "id": "72246670-9947-4826-bf96-6d911286c526",
-        "outputId": "17e8336c-a8b8-46e3-d56d-7ed78e63113e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 653
-        }
+        },
+        "id": "72246670-9947-4826-bf96-6d911286c526",
+        "outputId": "17e8336c-a8b8-46e3-d56d-7ed78e63113e"
       },
       "outputs": [
         {
@@ -180,11 +170,11 @@
       "id": "04563171-76b8-4dd1-ac0c-b88cc5e8cf98",
       "metadata": {
         "tags": [],
-        "id": "04563171-76b8-4dd1-ac0c-b88cc5e8cf98",
-        "outputId": "eebdf5d4-9444-4917-adaa-f2d566781bbb",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "04563171-76b8-4dd1-ac0c-b88cc5e8cf98",
+        "outputId": "eebdf5d4-9444-4917-adaa-f2d566781bbb"
       },
       "outputs": [
         {
@@ -239,11 +229,11 @@
       "id": "8ac230f6-0dfe-4d3c-826a-ffa7bbf1c623",
       "metadata": {
         "tags": [],
-        "id": "8ac230f6-0dfe-4d3c-826a-ffa7bbf1c623",
-        "outputId": "94fbc718-ea49-41cd-db9c-bab6d2025e64",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "8ac230f6-0dfe-4d3c-826a-ffa7bbf1c623",
+        "outputId": "94fbc718-ea49-41cd-db9c-bab6d2025e64"
       },
       "outputs": [
         {
@@ -296,12 +286,12 @@
       "id": "2dde48cf-da63-467d-a2e5-e61d4245d85c",
       "metadata": {
         "tags": [],
-        "id": "2dde48cf-da63-467d-a2e5-e61d4245d85c",
-        "outputId": "0c37d388-5844-4e23-8148-da55b1b11cf4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 587
-        }
+        },
+        "id": "2dde48cf-da63-467d-a2e5-e61d4245d85c",
+        "outputId": "0c37d388-5844-4e23-8148-da55b1b11cf4"
       },
       "outputs": [
         {
@@ -376,12 +366,12 @@
       "id": "efeebee0-dd02-4487-a49d-440763f795d2",
       "metadata": {
         "tags": [],
-        "id": "efeebee0-dd02-4487-a49d-440763f795d2",
-        "outputId": "fb1c31a1-7caf-4cc8-8cff-17e9ab7e90bd",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "id": "efeebee0-dd02-4487-a49d-440763f795d2",
+        "outputId": "fb1c31a1-7caf-4cc8-8cff-17e9ab7e90bd"
       },
       "outputs": [
         {
@@ -497,6 +487,238 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "x1TkeiF69jAn"
+      },
+      "id": "x1TkeiF69jAn"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "import pandas as pd\n",
+        "import math\n",
+        "\n",
+        "# Manually defining the dataset as a NumPy array (same as the Excel file)\n",
+        "data = np.array([\n",
+        "    ['RID', 'AGE', 'INCOME', 'STUDENT', 'CREDIT_RATING', 'CLASS:BUYS_COMPUTER'],\n",
+        "    [1, 'Youth', 'High', 'No', 'Fair', 'No'],\n",
+        "    [2, 'Youth', 'High', 'No', 'Excellent', 'No'],\n",
+        "    [3, 'Middle_Aged', 'High', 'No', 'Fair', 'Yes'],\n",
+        "    [4, 'Senior', 'Medium', 'No', 'Fair', 'Yes'],\n",
+        "    [5, 'Senior', 'Low', 'Yes', 'Fair', 'Yes'],\n",
+        "    [6, 'Senior', 'Low', 'Yes', 'Excellent', 'No'],\n",
+        "    [7, 'Middle_Aged', 'Low', 'Yes', 'Excellent', 'Yes'],\n",
+        "    [8, 'Youth', 'Medium', 'No', 'Fair', 'No'],\n",
+        "    [9, 'Youth', 'Low', 'Yes', 'Fair', 'Yes'],\n",
+        "    [10, 'Senior', 'Medium', 'Yes', 'Fair', 'Yes'],\n",
+        "    [11, 'Youth', 'Medium', 'Yes', 'Excellent', 'Yes'],\n",
+        "    [12, 'Middle_Aged', 'Medium', 'No', 'Excellent', 'Yes'],\n",
+        "    [13, 'Middle_Aged', 'High', 'Yes', 'Fair', 'Yes'],\n",
+        "    [14, 'Senior', 'Medium', 'No', 'Excellent', 'No']\n",
+        "])\n",
+        "\n",
+        "# Converting the NumPy array to a Pandas DataFrame\n",
+        "columns = data[0]  # Extracting column names\n",
+        "df = pd.DataFrame(data[1:], columns=columns)\n",
+        "\n",
+        "# Target column\n",
+        "target_data = df['CLASS:BUYS_COMPUTER']\n",
+        "\n",
+        "# Function to compute entropy\n",
+        "def entropy(x):\n",
+        "    class_count = {}\n",
+        "    for val in x:\n",
+        "        class_count[val] = class_count.get(val, 0) + 1\n",
+        "    total_instances = len(x)\n",
+        "    entropy = 0\n",
+        "    for count in class_count.values():\n",
+        "        prob = count / total_instances\n",
+        "        entropy -= prob * math.log2(prob)\n",
+        "    return entropy\n",
+        "\n",
+        "# Compute dataset entropy\n",
+        "dataentropy = entropy(target_data)\n",
+        "print(f\"Entropy of the dataset: {dataentropy:.4f}\")\n",
+        "\n",
+        "# Function to compute information gain\n",
+        "def info_gain(df, attribute, target_column):\n",
+        "    total_entropy = entropy(df[target_column])\n",
+        "    values = df[attribute].unique()\n",
+        "    weight_entropy = 0\n",
+        "    total_instances = len(df)\n",
+        "    for value in values:\n",
+        "        subset = df[df[attribute] == value]\n",
+        "        subset_entropy = entropy(subset[target_column])\n",
+        "        weight = len(subset) / total_instances\n",
+        "        weight_entropy += weight * subset_entropy\n",
+        "    return total_entropy - weight_entropy\n",
+        "\n",
+        "# Compute information gain for each attribute\n",
+        "target_column = 'CLASS:BUYS_COMPUTER'\n",
+        "attributes = df.columns[1:-1]\n",
+        "info_gain_values = {attr: info_gain(df, attr, target_column) for attr in attributes}\n",
+        "\n",
+        "# Print Information Gain\n",
+        "print(\"\\nInformation Gain for each attribute:\")\n",
+        "for attr, ig in info_gain_values.items():\n",
+        "    print(f\"{attr}: {ig:.4f}\")\n",
+        "\n",
+        "# Find best attribute for splitting\n",
+        "best_attribute = max(info_gain_values, key=info_gain_values.get)\n",
+        "print(f\"\\nBest attribute for splitting: {best_attribute}\")\n",
+        "\n",
+        "# ID3 Algorithm\n",
+        "def id3(df, target_column, attributes):\n",
+        "    if len(df[target_column].unique()) == 1:\n",
+        "        return df[target_column].unique()[0]\n",
+        "    if len(attributes) == 0:\n",
+        "        return df[target_column].mode()[0]\n",
+        "    info_gain_values = {attr: info_gain(df, attr, target_column) for attr in attributes}\n",
+        "    best_attribute = max(info_gain_values, key=info_gain_values.get)\n",
+        "    tree = {best_attribute: {}}\n",
+        "    remaining_attributes = [attr for attr in attributes if attr != best_attribute]\n",
+        "    for value in df[best_attribute].unique():\n",
+        "        subset = df[df[best_attribute] == value]\n",
+        "        tree[best_attribute][value] = id3(subset, target_column, remaining_attributes)\n",
+        "    return tree\n",
+        "\n",
+        "# Function to print tree\n",
+        "def print_tree(tree, indent=\"\"):\n",
+        "    if not isinstance(tree, dict):\n",
+        "        print(indent + \"→ \" + str(tree))\n",
+        "        return\n",
+        "    for key, value in tree.items():\n",
+        "        print(indent + key)\n",
+        "        for sub_key, sub_value in value.items():\n",
+        "            print(indent + f\" ├── {sub_key}\")\n",
+        "            print_tree(sub_value, indent + \" │   \")\n",
+        "\n",
+        "# Run ID3\n",
+        "decision_tree = id3(df, target_column, attributes)\n",
+        "print(\"\\nID3 Decision Tree\")\n",
+        "print_tree(decision_tree)\n",
+        "\n",
+        "# Function to compute Gini impurity\n",
+        "def gini_impurity(class_counts):\n",
+        "    total = sum(class_counts)\n",
+        "    gini = 1.0 - sum((count / total) ** 2 for count in class_counts)\n",
+        "    return gini\n",
+        "\n",
+        "# Function to compute Gini for each attribute\n",
+        "def gini_split(df, attribute, target_column):\n",
+        "    attribute_values = df[attribute].value_counts()\n",
+        "    total_instances = len(df)\n",
+        "    weighted_gini = 0\n",
+        "    for value in attribute_values.keys():\n",
+        "        subset = df[df[attribute] == value]\n",
+        "        subset_class_counts = subset[target_column].value_counts()\n",
+        "        gini_A = gini_impurity(subset_class_counts)\n",
+        "        weighted_gini += (len(subset) / total_instances) * gini_A\n",
+        "    return weighted_gini\n",
+        "\n",
+        "# Compute Gini impurity for each attribute\n",
+        "gini_attribute = {attr: gini_split(df, attr, target_column) for attr in attributes}\n",
+        "print(\"\\nGini impurity for each attribute:\")\n",
+        "for attr, gini in gini_attribute.items():\n",
+        "    print(f\"{attr}: {gini:.3f}\")\n",
+        "\n",
+        "# CART Algorithm\n",
+        "def cart(df, target_column, attributes):\n",
+        "    if len(df[target_column].unique()) == 1:\n",
+        "        return df[target_column].unique()[0]\n",
+        "    if len(attributes) == 0:\n",
+        "        return df[target_column].mode()[0]\n",
+        "    gini_values = {attr: gini_split(df, attr, target_column) for attr in attributes}\n",
+        "    best_attribute = min(gini_values, key=gini_values.get)\n",
+        "    tree = {best_attribute: {}}\n",
+        "    remaining_attributes = [attr for attr in attributes if attr != best_attribute]\n",
+        "    for value in df[best_attribute].unique():\n",
+        "        subset = df[df[best_attribute] == value]\n",
+        "        tree[best_attribute][value] = cart(subset, target_column, remaining_attributes)\n",
+        "    return tree\n",
+        "\n",
+        "# Run CART\n",
+        "cart_tree = cart(df, target_column, attributes)\n",
+        "print(\"\\nCART Decision Tree\")\n",
+        "print_tree(cart_tree)\n",
+        "\n",
+        "# Best attribute based on Gini impurity\n",
+        "selected_attribute = min(gini_attribute, key=gini_attribute.get)\n",
+        "print(f\"\\nSelected attribute for CART: {selected_attribute}\")\n"
+      ],
+      "metadata": {
+        "id": "HzG1bgg79j84",
+        "outputId": "dce724c2-9035-4d72-eead-e2698a04d449",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "HzG1bgg79j84",
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Entropy of the dataset: 0.9403\n",
+            "\n",
+            "Information Gain for each attribute:\n",
+            "AGE: 0.2467\n",
+            "INCOME: 0.0292\n",
+            "STUDENT: 0.1518\n",
+            "CREDIT_RATING: 0.0481\n",
+            "\n",
+            "Best attribute for splitting: AGE\n",
+            "\n",
+            "ID3 Decision Tree\n",
+            "AGE\n",
+            " ├── Youth\n",
+            " │   STUDENT\n",
+            " │    ├── No\n",
+            " │    │   → No\n",
+            " │    ├── Yes\n",
+            " │    │   → Yes\n",
+            " ├── Middle_Aged\n",
+            " │   → Yes\n",
+            " ├── Senior\n",
+            " │   CREDIT_RATING\n",
+            " │    ├── Fair\n",
+            " │    │   → Yes\n",
+            " │    ├── Excellent\n",
+            " │    │   → No\n",
+            "\n",
+            "Gini impurity for each attribute:\n",
+            "AGE: 0.343\n",
+            "INCOME: 0.440\n",
+            "STUDENT: 0.367\n",
+            "CREDIT_RATING: 0.429\n",
+            "\n",
+            "CART Decision Tree\n",
+            "AGE\n",
+            " ├── Youth\n",
+            " │   STUDENT\n",
+            " │    ├── No\n",
+            " │    │   → No\n",
+            " │    ├── Yes\n",
+            " │    │   → Yes\n",
+            " ├── Middle_Aged\n",
+            " │   → Yes\n",
+            " ├── Senior\n",
+            " │   CREDIT_RATING\n",
+            " │    ├── Fair\n",
+            " │    │   → Yes\n",
+            " │    ├── Excellent\n",
+            " │    │   → No\n",
+            "\n",
+            "Selected attribute for CART: AGE\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "id": "f7ed0547-2460-45c9-806a-a1ed7cdf0016",
@@ -526,8 +748,7 @@
       "version": "3.11.5"
     },
     "colab": {
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     }
   },
   "nbformat": 4,
