--- a/LDA_2022503035/lda_implementation.ipynb
+++ b/LDA_2022503035/lda_implementation.ipynb
@@ -25,6 +25,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "##dataset loading"
+      ],
+      "metadata": {
+        "id": "5fPGv8vmSLQ5"
+      },
+      "id": "5fPGv8vmSLQ5"
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "id": "9075035d",
@@ -54,6 +64,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "##importing libraries\n"
+      ],
+      "metadata": {
+        "id": "NTDpvTDrSOuP"
+      },
+      "id": "NTDpvTDrSOuP"
+    },
+    {
       "cell_type": "code",
       "source": [
         "import numpy as np\n",
@@ -73,6 +93,16 @@
       "id": "654pSsKwp6Rr",
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## class for random forest\n"
+      ],
+      "metadata": {
+        "id": "Mu3kBIF7SSj8"
+      },
+      "id": "Mu3kBIF7SSj8"
     },
     {
       "cell_type": "code",
@@ -104,6 +134,16 @@
       "id": "DOGXdi2vqmNb",
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## class for visualisation"
+      ],
+      "metadata": {
+        "id": "3YL57wGXSXck"
+      },
+      "id": "3YL57wGXSXck"
     },
     {
       "cell_type": "code",
@@ -145,6 +185,16 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## lda"
+      ],
+      "metadata": {
+        "id": "2xeGFdWbSgKN"
+      },
+      "id": "2xeGFdWbSgKN"
+    },
+    {
       "cell_type": "code",
       "source": [
         "class LDADimensionalityReduction:\n",
@@ -162,6 +212,16 @@
       "id": "oLbzn1GlwtxG",
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## accessing the data using dataframes"
+      ],
+      "metadata": {
+        "id": "ZRGpw7FHSi8F"
+      },
+      "id": "ZRGpw7FHSi8F"
     },
     {
       "cell_type": "code",
@@ -813,11 +873,11 @@
         "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)"
       ],
       "metadata": {
-        "id": "xrW_Kt4RIW_i",
-        "outputId": "39b61777-91e0-458b-f922-fa1c4cc76e9f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "xrW_Kt4RIW_i",
+        "outputId": "39b61777-91e0-458b-f922-fa1c4cc76e9f"
       },
       "id": "xrW_Kt4RIW_i",
       "execution_count": 2,
@@ -912,6 +972,16 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## viuslaising before lda and after lda"
+      ],
+      "metadata": {
+        "id": "aif4idMvSpyi"
+      },
+      "id": "aif4idMvSpyi"
+    },
+    {
       "cell_type": "code",
       "source": [
         "rf_before_lda = RandomForestModel()\n",
@@ -936,12 +1006,12 @@
         "Visualizer.plot_lda_projection(X_train_lda, y_train)"
       ],
       "metadata": {
-        "id": "piZamx0HR686",
-        "outputId": "308c491f-020a-4984-aac7-372a44bae693",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "id": "piZamx0HR686",
+        "outputId": "308c491f-020a-4984-aac7-372a44bae693"
       },
       "id": "piZamx0HR686",
       "execution_count": 6,
