--- a/image_classification.ipynb
+++ b/image_classification.ipynb
@@ -15,8 +15,17 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "source": [
+        "##required package"
+      ],
+      "metadata": {
+        "id": "lfmGlBO3z1xy"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -76,6 +85,15 @@
       "source": [
         "!pip install torch torchvision scikit-learn matplotlib numpy"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##classification using svm"
+      ],
+      "metadata": {
+        "id": "n8LhyVkzz5BN"
+      }
     },
     {
       "cell_type": "code",
@@ -299,7 +317,7 @@
         "id": "ds2Ccbv2pfZh",
         "outputId": "cffc1e30-d3c9-488d-8c26-6f028e9d41f4"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -393,6 +411,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##classification using CNN"
+      ],
+      "metadata": {
+        "id": "FyrnU-WHz-qd"
+      }
     },
     {
       "cell_type": "code",
@@ -709,8 +736,7 @@
         "\n",
         "    # Visualize predictions\n",
         "    print(\"\\nVisualizing predictions...\")\n",
-        "    visualize_predictions(test_loader, model, device)\n",
-        ""
+        "    visualize_predictions(test_loader, model, device)\n"
       ],
       "metadata": {
         "colab": {
@@ -720,7 +746,7 @@
         "id": "C_RLJCggpnBC",
         "outputId": "72e0fd26-3d7a-429d-ce74-ae17358d2e62"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
